--- a/config.env
+++ b/config.env
@@ -1,5 +1,5 @@
-API_ID=                                    
-API_HASH=   
-BOT_TOKEN=                            
+API_ID= 5899153                                 
+API_HASH= 0248947d248322cc582eefa5a8e0451e 
+BOT_TOKEN= 5823107991:AAGxIgVvSw9XwWYC1dsGhsDE58iXPlAaDy4                           
 COMMAND_PREFIXES=["!",".","/"]                
 OWNER_USERID = [12345677,834836509]
